Bug: 647509 Reviewer: Lynn Christensen Comment: Profile page content had extra margin that pushed it away from edge, creating a bad look. Fixed.

--- a/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtProfile.css
+++ b/ssf/gwt/src/org/kablink/teaming/gwt/public/GwtProfile.css
@@ -1,7 +1,7 @@
 /*  Profile Specific Styles */
 
 #profileContents  {
-margin:8px 8px 0 0;
+margin: 0px;
 top:25px;
 }
 
